unpackaged/main/default/objects/Error_Log__c/fields/Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>Error_Summary__c</fullName>
    <label>Error Summary</label>
    <type>TextArea</type>
</CustomField>