unpackaged/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Details__c</columns>
    <columns>Error_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>