unpackaged/main/default/objects/Error_Log__c/listViews/Schedule_Agreement_Errors.listView-meta.xml
<ListView>
    <fullName>Schedule_Agreement_Errors</fullName>
    <columns>NAME</columns>
    <columns>Error_Details__c</columns>
    <columns>Error_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Summary__c</field>
        <operation>contains</operation>
        <value>Schedule Agreement</value>
    </filters>
    <label>Schedule Agreement Errors</label>
</ListView>